--- a/Desenvolvimento de Interfaces Web/Portal de e-commerce/style.css
+++ b/Desenvolvimento de Interfaces Web/Portal de e-commerce/style.css
@@ -6,3 +6,11 @@
     height: 200px;
     object-fit: cover;
   }
+  .tamanho-carrinho{
+    width: 100px;
+    height: auto;
+  }
+  .tamanho-logo{
+    width: 150px;
+    height: auto;
+  }
